# klavis

./: .cache  .env.example  .eslintignore  .eslintrc.js  .gitignore  .mcp.json  .prettierrc.js  Dockerfile  LICENSE  LLM.md  PROOF_OF_CORRECTNESS.md  README.md  SUMMARY.md  apply_changes.sh  auth.py  docker-compose.yml  main.py  mcp.example.json  mcp.json  mcp_server.py  opencode.json  package-lock.json  package.json  reddit_mcp_server.py  requirements.txt  server.py  test_reddit_server.py  tsconfig.json
.codex-plugin/: plugin.json
.github/workflows/: generate-sdks.yml  mcp-servers-build.yml  server-name-mapping.json  sync-openapi.yml  typescript-sdk-release.yml
_oauth_support/: server_name.json
_oauth_support/docker/: Dockerfile.template  entrypoint_wrapper.sh
docs/: connect-ai-assistant.mdx  docs.json  introduction.mdx  quickstart.mdx
docs/ai-platform-integration/: ag2.mdx  agno.mdx  cohere.mdx  langchain.mdx  mistral.mdx  overview.mdx
docs/api-reference/: authentication.mdx  openapi.json  overview.mdx  rate-limit.mdx
docs/concepts/: sandbox.mdx
docs/documentation/: introduction.mdx  oauth_white_label.mdx  quickstart.mdx  securing-the-mcp-revolution-introducing-klavis-guardrails.mdoc
docs/enterprise-security/: klavis-security.mdx
docs/knowledge-base/: introduction.mdx
docs/mcp-server/: affinity.mdx  airtable.mdx  amplitude.mdx  asana.mdx  attio.mdx  box.mdx  brave_search.mdx  cal_com.mdx  calendly.mdx  canva.mdx  clickup.mdx  clockwise.mdx  close.mdx  cloudflare.mdx  coinbase.mdx  confluence.mdx  dialpad.mdx  discord.mdx  doc2markdown.mdx  docusign.mdx  dropbox.mdx  elevenlabs.mdx  exa.mdx  fathom.mdx  fetch_url.mdx  figma.mdx  firecrawl-deep-research.mdx  firecrawl-web-search.mdx  fireflies.mdx  freshdesk.mdx  github.mdx  gitlab.mdx  gmail.mdx  gong.mdx  google_calendar.mdx  google_cloud.mdx  google_docs.mdx  google_drive.mdx  google_forms.mdx  google_jobs.mdx  (+63 more)
examples/agno-klavis/: Use_Strata_with_Agno.ipynb  requirements.txt
examples/google-gemini-cli/: index.js
examples/google-genai/: Use_Klavis_with_Gemini.ipynb
examples/klavis-sandbox/: klavis_filesystem_mcp_sandbox.ipynb  klavis_gmail_mcp_sandbox.ipynb  klavis_google_cloud_mcp_sandbox.ipynb  klavis_local_sandbox.ipynb  klavis_mcp_sandbox_api_example copy.ipynb  klavis_notion_mcp_sandbox.ipynb  klavis_poste_email_mcp_sandbox.ipynb  klavis_sandbox.ipynb  klavis_sandbox_execution.ipynb  snowflake.json
examples/llama-klavis/: .env.example  main.py  (+4 more)
fern/: fern.config.json  generators.yml  overrides.yml
klavis-debian-package/: tools.json
klavis-package/: tools.json
mcp_servers/: .eslintrc.js  package-lock.json  package.json  test-http-error.js  tsconfig.json
mcp_servers/arxiv_latex/: Dockerfile  README.md  pyproject.toml
mcp_servers/arxiv_latex/server/: main.py
mcp_servers/google-hotels/: Dockerfile  README.md  __init__.py  __main__.py  api_client.py  pyproject.toml  requirements.txt  schemas.py  server.py  tools.py
mcp_servers/local/pdf-tools/: README.md  pyproject.toml  requirements.txt  server.py
mcp_servers/scholarly/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
mcp_servers/scholarly/src/mcp_scholarly/: __init__.py  google_scholar.py  server.py
mcp_servers/spotify/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py
mcp_servers/spotify/src/spotify_mcp/: server.py
mcp_servers/spotify/tools/: __init__.py  album.py  albums.py  artist.py  artists.py  base.py  episodes.py  playlists.py  search.py  shows.py  spotify_api.py  track.py  tracks.py  users.py
mcp_servers/tavily/: .env.example  .gitignore  PROOF_OF_CORRECTNESS.md  README.md  __init__.py  app.py  client.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  resources.py  server.py  utils.py
mcp_servers/tavily/docs/: COMPLETE_DOCUMENTATION.md
mcp_servers/tavily/github/workflows/: test.yml
mcp_servers/tavily/src/klavis_tavily_mcp/: __init__.py  schemas.py  server.py
mcp_servers/tavily/tests/: test_smoke.py
mcp_servers/tavily/tools/: __init__.py  auth.py  client.py  context.py  crawl.py  errors.py  extract.py  news.py  search.py  types.py
open-strata/: README.md  pyproject.toml
outook_mail/: README.md
tests/: test_list_vendors.py
tools/: create_database.py  create_project.py  list_databases.py  list_orders.py  list_projects.py  list_users.py  list_vendors.py  run_sql.py
(+1496 files in other folders)
