[project]
name = "arxiv-latex-mcp"
version = "0.2.1"
description = "An MCP server that fetches and processes arXiv papers using LaTeX source for accurate equation handling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "arxiv-to-prompt>=0.10.0",
    "click>=8.0.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
arxiv-latex-mcp = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
