[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-hotels-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Google Hotels search and booking assistance"
authors = [
    {name = "Tanmay Naik", email = "tanmaynaik99811@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
google-hotels-mcp = "google_hotels_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_hotels_mcp"]