[project]
name = "mcp-scholarly"
version = "0.1.0"
description = "A MCP server to search for accurate academic articles."
requires-python = ">=3.11"
dependencies = [
 "arxiv>=2.1.3",
 "click>=8.0.0",
 "free-proxy>=1.1.3",
 "mcp>=1.2.0",
 "python-dotenv>=1.0.0",
 "scholarly>=1.7.11",
 "starlette>=0.27.0",
 "uvicorn>=0.23.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scholarly"]

[project.scripts]
mcp-scholarly = "mcp_scholarly:main"
