[project]
name = "spotify-mcp"
version = "0.2.0"
description = "MCP spotify project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.4",
    "python-dotenv>=1.0.1",
    "spotipy==2.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv.sources]
spotify-mcp = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_mcp"]

[project.scripts]
spotify-mcp = "spotify_mcp.server:cli_main"
