[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klavis-tavily-mcp"
version = "0.1.0"
description = "MCP server wrapping Tavily Search & Extract for Klavis AI"
authors = [{ name = "Sai Kireeti", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "tavily", "klavis"]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
klavis-tavily-mcp = "klavis_tavily_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
