[project]
name = "klavis-mcp-tavily"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",        # MCP Python SDK + CLI runner
  "httpx>=0.27.0",          # HTTP client
  "pydantic>=2.6.0",        # request/response schemas
  "python-dotenv>=1.0.1",   # load .env
  "tenacity>=8.2.3",        # retries with backoff
  "typing-extensions>=4.12.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
