[project]
name = "pdf-tools-mcp"
version = "1.0.0"
description = "MCP server for local PDF document manipulation and extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.3.1",
    "mcp==1.23.2",
    "pypdf==6.4.1",
]

[project.scripts]
pdf-tools-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

